# jk-web-project

./: README.md  pyproject.toml  requirements.txt
digitolio/: db.sqlite3  manage.py  script.py
digitolio/digitolio/: asgi.py  settings.py  urls.py  wsgi.py
digitolio/persons/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
digitolio/persons/migrations/: 0001_initial.py  0002_person_description_person_main_work_areas.py  0003_rename_main_work_areas_person_specialization.py  0004_person_experience_person_programming_language.py  0005_remove_person_name.py  0006_alter_person_email.py  0007_remove_person_experience_and_more.py  0008_alter_person_options.py  0009_person_avatar.py  0010_person_discord_url_person_github_url_person_tg_url.py  0011_person_team_person_year.py  0012_person_profile_background.py  0013_alter_person_profile_background.py  0014_alter_person_profile_background.py  0015_group_alter_person_profile_background_and_more.py  0016_alter_person_profile_background.py  0017_alter_person_profile_background.py  0018_alter_person_profile_background.py  0018_remove_person_team_remove_person_group_person_group.py  0019_merge_20240616_0945.py  0020_alter_person_group.py  (+15 more)
digitolio/projects/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
digitolio/static/: filter-persons.js  filter-projects.js  search-persons.js  search-projects.js  search.js
digitolio/templates/: base.html  create_project.html  index.html  login.html  profile.html  profile_change.html  profile_update.html  project_detail.html  registration.html  test.html  users.html
(+47 files in other folders)
